lab-3/examples/ex17.nojs
// error

int main(){
	string a = "Test

	return 0
}